@@ -4,3 +4,5 @@ pm_to_blib
 test_dir
 README
 *.old
+.svn
+.git
