@@ -2,7 +2,7 @@
 #
 # Copyright 2001-2009 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
-# General Public License or the Perl Artistic License.
+# General Public License Version 3 or the Perl Artistic License Version 2.0.
 
 require 5.005;
 use ExtUtils::MakeMaker;
