@@ -10,8 +10,8 @@ This package is Copyright 2003-2009 by Wilson Snyder
 <wsnyder@wsnyder.org>.
 
    This program is free software; you can redistribute it and/or modify
-it under the terms of either the GNU General Public License or the Perl
-Artistic License.
+it under the terms of either the GNU General Public License Version 3
+or the Perl Artistic License Version 2.0.
 
    This code is provided with no warranty of any kind, and is used
 entirely at your own risk.
@@ -51,8 +51,9 @@ This version of Make::Cache has been built and tested on:
 
    * i386-linux
 
-   It should run on any system with Perl and GCC.  It may be easily
-modified to support other compilers.
+   It should run on any system with Perl and GCC, though edits may be
+needed to run on non-Linux systems.  It may be easily modified to
+support other compilers.
 
 1.6 Installation
 ================
