@@ -28,8 +28,8 @@ This is the Make::Cache Package.
 This package is Copyright 2003-2009 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
 
 This program is free software; you can redistribute it and/or modify
-it under the terms of either the GNU General Public License or the
-Perl Artistic License.
+it under the terms of either the GNU General Public License Version 3
+or the Perl Artistic License Version 2.0.
 
 This code is provided with no warranty of any kind, and is used entirely at
 your own risk.
@@ -72,8 +72,9 @@ This version of Make::Cache has been built and tested on:
 @item i386-linux
 @end itemize
 
-It should run on any system with Perl and GCC.  It may be easily
-modified to support other compilers.
+It should run on any system with Perl and GCC, though edits may be
+needed to run on non-Linux systems.  It may be easily modified to
+support other compilers.
 
 @node Installation,  , Supported Systems, Top
 @section Installation
