@@ -4,7 +4,7 @@
 #
 # Copyright 2002-2009 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
-# General Public License or the Perl Artistic License.
+# General Public License Version 3 or the Perl Artistic License Version 2.0.
 ######################################################################
 
 use Test;
