@@ -5,8 +5,8 @@
 # This program is Copyright 2002-2009 by Wilson Snyder.
 #
 # This program is free software; you can redistribute it and/or modify
-# it under the terms of either the GNU General Public License or the
-# Perl Artistic License.
+# it under the terms of either the GNU General Public License Version 3 or the
+# Perl Artistic License Version 2.0.
 #
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
