@@ -2,6 +2,12 @@ Revision history for Perl extension Make::Cache
 
 The contributors that suggested a given feature are shown in [].
 
+* Make::Cache 1.051 2009/05/19
+
+**	This package is now licensed under LGPL v3 and/or Artistic v2.0.
+
+****	Fix ignore files to support GIT.
+
 * Make::Cache 1.050 2009/01/05
 
 ***	Add objcache --completed option to print compile times.
@@ -84,7 +90,7 @@ This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
 Copyright 2003-2009 by Wilson Snyder.  This program is free software;
 you can redistribute it and/or modify it under the terms of either the GNU
-General Public License or the Perl Artistic License.
+General Public License Version 3 or the Perl Artistic License Version 2.0.
 
 Local variables:
 mode: outline
